# wasm-vm

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  ROADMAP.md  index.html  loader.js  main.js  package.json  roadmap.js  rust-toolchain.toml
.cargo/: config.toml
compliance/: EXCLUSIONS.md  README.md  check_isa_yaml.sh  provision.sh
configs/: wasm-vm.config
crates/cli/: Cargo.toml
crates/cli/benches/: interp.rs
crates/cli/src/: boot.rs  chunk.rs  chunk_verify.rs  debug.rs  file_backend.rs  main.rs  net_backend.rs  oci.rs  trace_json.rs
crates/cli/src/oci/: tests.rs  validate.rs
crates/cli/src/oci/validate/: tests.rs
crates/cli/tests/: boot_alpine.rs  boot_alpine_dns.rs  boot_alpine_net.rs  boot_busybox.rs  boot_container_smoke.rs  boot_wvrun.rs  chunk.rs  chunk_verify.rs  oci_sideload_parse.rs  run.rs  ws_connector_over_real_ws.rs  wvrelay_smoke.rs
crates/cli/tests/common/: mod.rs
crates/core/: Cargo.toml
crates/core/benches/: mmio_dispatch.rs  softfloat_bench.rs
crates/core/examples/: zerocost.rs
crates/core/src/: block.rs  bus.rs  csr.rs  decode.rs  decode_c.rs  fdt.rs  htif.rs  lib.rs  loader.rs  mmio.rs  mmu.rs  platform.rs  pmp.rs  ram.rs  resume.rs  resume_tests.rs  sbi.rs  snapshot.rs  softfloat.rs  tlb.rs  trace.rs  zicsr_stub.rs
crates/core/src/dev/: clint.rs  console.rs  mod.rs  plic.rs  rtc.rs  syscon.rs  uart16550.rs
crates/core/src/dev/virtio/: blk.rs  mmio.rs  mod.rs  net.rs  queue.rs
crates/core/src/diag/: irqstats.rs  mod.rs
crates/core/src/hart/: fregs.rs  mod.rs  regs.rs
crates/core/src/sbi/: base.rs  dbcn.rs  hsm.rs  ipi.rs  legacy.rs  mod.rs  rfence.rs  srst.rs  time.rs
crates/core/tests/: boot_contract.rs  clint.rs  console.rs  critic_storm_hostile.rs  csr.rs  decode_golden.rs  decode_props.proptest-regressions  decode_props.rs  determinism.rs  exhaustive.rs  fdt_emit.rs  golden_run.rs  hart_control.rs  hart_memory.rs  hart_semantics.rs  hot_path.rs  htif_run.rs  interrupts.rs  loader_elf.rs  no_stdout_in_core.rs  perf_baseline.rs  plic.rs  pmp.rs  precise_exceptions.rs  privilege.rs  reset.rs  riscv_tests.rs  riscv_tests_f.rs  riscv_tests_mi.rs  riscv_tests_suite.rs  rv64a.rs  rv64c.rs  rv64d.rs  rv64f.rs  rv64m.rs  sbi_console.rs  sbi_ipi_hsm.rs  sbi_rfence_stale_tlb.rs  sbi_timer.rs  sbi_timer_fuzz.rs  (+42 more)
crates/core/tests/data/: decode_fuzz_corpus_e0t06.txt  model_e0t08.py  spec_model_e0t09.py
crates/core/tests/fixtures/: build.sh  link.ld  minimal.elf  minimal.objdump.txt  minimal.readelf.txt  minimal.s  stripped.elf
crates/core/tests/genuine/: i386.elf  i386.s  rv32.elf  x86_64_dyn.elf  x86_64_exec.elf
crates/core/tests/golden/: virt.dts
crates/slirp/: Cargo.toml
crates/slirp/src/: bridge.rs  connector.rs  device.rs  dhcp.rs  dns.rs  dns_service.rs  dns_tcp.rs  doh.rs  e2e_pump_stack.rs  lib.rs  local_backend.rs  manager.rs  nat.rs  native.rs  native_dns.rs  native_resolver.rs  pump.rs  resolver.rs  stack.rs  std_connector.rs  sync_connector.rs  tcp.rs  udp.rs  udp_frame.rs  udp_integration_tests.rs  ws_connector.rs  ws_proxy.rs
crates/slirp/src/bridge/: tests.rs
crates/slirp/src/dhcp/: tests.rs
crates/slirp/src/dns/: tests.rs
crates/slirp/src/dns_tcp/: tests.rs
crates/slirp/src/doh/: tests.rs
crates/slirp/src/manager/: tests.rs
crates/slirp/src/nat/: tests.rs
crates/slirp/src/native/: tests.rs
crates/slirp/src/native_resolver/: tests.rs
crates/slirp/src/resolver/: tests.rs
crates/slirp/src/stack/: tests.rs
crates/slirp/src/tcp/: tests.rs
crates/slirp/src/udp/: tests.rs
crates/slirp/src/udp_frame/: tests.rs
crates/slirp/src/ws_proxy/: driver.rs  driver_tests.rs  mux.rs  mux_tests.rs  relay.rs  relay_tests.rs  session.rs  session_tests.rs  stream.rs  stream_tests.rs  tests.rs  ws_adapter.rs  ws_adapter_tests.rs
crates/slirp/tests/: local_backend_dhcp.rs  outbound_sync.rs  udp_ws_e2e.rs  ws_connector_e2e.rs
crates/storage/: Cargo.toml
crates/storage/src/: blobstore.rs  blobstore_tests.rs  cache.rs  dbmeta.rs  fetch.rs  lib.rs  oci.rs  overlay.rs  prefetch.rs  pullthrough.rs  pullthrough_tests.rs  tests.rs  writeback.rs
crates/storage/src/cache/: tests.rs
crates/storage/src/dbmeta/: tests.rs
crates/storage/src/fetch/: tests.rs
crates/storage/src/oci/: tests.rs
crates/storage/src/overlay/: tests.rs
crates/storage/src/prefetch/: tests.rs
crates/storage/src/writeback/: tests.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: chunked.rs  critic_flush_reset.rs  doh_fetch.rs  http_fetch.rs  idb_store.rs  lib.rs  storage_err.rs  tailscale_dns.rs  worker_transport.rs  ws_transport.rs  ws_transport_state.rs
crates/wasm/tests/: block.rs  console.rs  csr.rs  decode.rs  decode_props.rs  determinism.rs  fdt.rs  hart.rs  hart_ctrl.rs  hart_mem.rs  htif.rs  loader.rs  mmio.rs  platform.rs  privilege.rs  ram_bus.rs  regs.rs  reset.rs  riscv_tests.rs  rv64a.rs  rv64c.rs  rv64d.rs  rv64f.rs  rv64m.rs  sbi.rs  sbi_timer.rs  snapshot.rs  softfloat.rs  trace.rs  uart16550.rs  virtio_blk.rs  virtio_mmio.rs  virtqueue.rs  wrapper.rs
docs/: baselines.md  boot-debugging.md  capstone-e0.md  container-matrix.md  containers.md  kernel.md  level1-report.md  perf-baseline.md  platform.md  rootfs.md  timekeeping.md  trace-format.md
fuzz/: Cargo.toml  README.md
fuzz/corpus/decode/: hello.text  loops.text  memops.text
fuzz/fuzz_targets/: decode.rs
guest/: Makefile  README.md  check-reproducible.sh  console.h  crt0.S  hello.c  link.ld  loops.S  memops.c
pkg/: wasm_vm_wasm.d.ts  wasm_vm_wasm.js  wasm_vm_wasm_bg.wasm  wasm_vm_wasm_bg.wasm.d.ts
pr-100/: main.js
pr-101/: loader.js
pr-102/: index.html  main.js
pr-103/: index.html
pr-104/: loader.js  main.js
pr-105/: loader.js
pr-106/: README.md
pr-108/: artifacts.json
pr-109/: roadmap.js
pr-123/: terminal.js
pr-125/: docker.js
pr-131/: docker.js
pr-147/: playwright.config.js
pr-152/: docker.js
pr-153/: index.html
pr-154/: bench-node.mjs  docker.js
pr-157/: docker.js  tabs.js
pr-158/: main.js
pr-160/: main.js
pr-163/: loader.js
pr-169/: file
pr-170/: loader.js
pr-171/: index.html  main.js  (+1 more)
(+716 files in other folders)
