[package]
name = "wasm-vm-cli"
description = "Native runner for the emulator core — full-speed testing without a browser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "wasm-vm"
path = "src/main.rs"

[features]
# Passthrough of core's quarantined zicsr-stub (E0-T19). Declaring it here means
# `--all-features` (what CI clippy runs) enables it on THIS crate too, so the boot
# subcommand — which needs the S-mode/SBI methods zicsr-stub compiles out — is cfg'd off
# consistently instead of calling methods that no longer exist. See src/boot.rs.
zicsr-stub = ["wasm-vm-core/zicsr-stub"]

[dependencies]
wasm-vm-core = { workspace = true, features = ["std", "trace"] }
wasm-vm-storage = { path = "../storage" }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
memmap2 = { workspace = true }
# E3.5-T01 OCI importer: read the layer tars (gzip/zstd) + the OCI JSON, verify blob digests.
tar = "0.4"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"
sha2 = { version = "0.10", default-features = false }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "interp"
harness = false
