[package]
name = "wasm-vm-core"
description = "The emulator core: pure Rust, no_std-friendly, zero web dependencies"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
# Web/JS crates (wasm-bindgen, js-sys, web-sys) are FORBIDDEN here — that is the
# crate boundary this workspace exists to enforce (ROADMAP.md, architectural bet #2).

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
proptest = "1"

[[bench]]
name = "mmio_dispatch"
harness = false
