[package]
name = "wasm-vm-slirp"
edition.workspace = true
license.workspace = true
repository.workspace = true

# E3-T14: the NAT/addressing core (pass 1) has no deps. Pass 2 adds smoltcp — the TCP/IP stack that
# parses/answers guest frames (ARP + ICMP echo now; TCP bridge next). tokio (the NativeConnector)
# still arrives later behind a feature so the browser build never pulls it.
# `native` (default) pulls tokio for the `NativeConnector` (the real outbound socket path used by the
# native harness). A future wasm build of this crate would use `default-features = false` so the
# browser never pulls tokio; the browser (crates/wasm) doesn't depend on this crate today regardless.
[features]
default = ["native"]
# `native` pulls tokio (the NativeConnector + relay driver) and tokio-tungstenite (the WS-wire
# adapter that bridges a real WebSocket to the relay). No TLS: the relay terminates plaintext WS;
# TLS belongs at the ingress. The browser build (`default-features = false`) pulls none of this.
native = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util"]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"], optional = true }
smoltcp = { version = "0.13", default-features = false, features = [
    "std",
    "medium-ethernet",
    "proto-ipv4",
    # The interface's automatic ICMP echo reply is gated behind this (it's in smoltcp's `default`
    # set, which we disabled) — without it the interface silently drops every `ping` (critic).
    "auto-icmp-echo-reply",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
] }
tokio = { version = "1", optional = true, default-features = false, features = [
    "rt",
    "net",
    "time",
    # The byte-pump splits the outbound stream and copies both ways over channels.
    "io-util",
    "sync",
] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake"], optional = true }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "macros",
    "io-util",
] }
