[package]
name = "wasm-vm-slirp"
edition.workspace = true
license.workspace = true
repository.workspace = true

# E3-T14: the NAT/addressing core (pass 1) has no deps. Pass 2 adds smoltcp — the TCP/IP stack that
# parses/answers guest frames (ARP + ICMP echo now; TCP bridge next). tokio (the NativeConnector)
# still arrives later behind a feature so the browser build never pulls it.
# `native` (default) pulls tokio for the `NativeConnector` (the real outbound socket path used by the
# native harness). The wasm build uses this crate with `default-features = false`, so the browser
# gets the local stack and WebSocket connector without pulling tokio.
[features]
default = ["native"]
# `native` pulls tokio (the NativeConnector + relay driver) and tokio-tungstenite (the WS-wire
# adapter that bridges a real WebSocket to the relay). No TLS: the relay terminates plaintext WS;
# TLS belongs at the ingress. The browser build (`default-features = false`) pulls none of this.
native = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util"]

[dependencies]
# E3-net (browser networking): the local-stack NetBackend impl needs the machine's NetBackend trait.
# default-features off (no `trace`/`std` core features). NOTE: this crate is NOT no_std — it uses std
# and enables smoltcp's `std` feature; it compiles for wasm32-unknown-unknown because that target
# provides std. (local_backend.rs is written alloc-only, but the crate around it is std.)
wasm-vm-core = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"], optional = true }
smoltcp = { version = "0.13", default-features = false, features = [
    "std",
    "medium-ethernet",
    "proto-ipv4",
    # The interface's automatic ICMP echo reply is gated behind this (it's in smoltcp's `default`
    # set, which we disabled) — without it the interface silently drops every `ping` (critic).
    "auto-icmp-echo-reply",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
] }
tokio = { version = "1", optional = true, default-features = false, features = [
    "rt",
    "net",
    "time",
    # The byte-pump splits the outbound stream and copies both ways over channels.
    "io-util",
    "sync",
    # The relay driver uses `tokio::select!` — a macro gated behind this feature. Without it the
    # `native` lib fails a standalone `cargo build` (dev-deps mask it during `cargo test`).
    "macros",
] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake"], optional = true }

[dev-dependencies]
libc = "0.2"
tokio = { version = "1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "macros",
    "io-util",
] }
