[package]
name = "wasm-vm-wasm"
description = "The wasm-bindgen boundary: everything browser-specific, nothing emulator-specific"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-vm-core = { workspace = true, features = ["trace"] }
wasm-bindgen = { workspace = true }
log = { workspace = true }
console_log = { workspace = true }
console_error_panic_hook = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
