[package]
name = "wasm-vm-wasm"
description = "The wasm-bindgen boundary: everything browser-specific, nothing emulator-specific"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-vm-core = { workspace = true, features = ["trace"] }
wasm-vm-storage = { path = "../storage" }
# E3-net: the browser slirp local stack (DHCP/ARP/ICMP). default-features off → no tokio in the browser.
wasm-vm-slirp = { path = "../slirp", default-features = false }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = { workspace = true }
console_log = { workspace = true }
console_error_panic_hook = { workspace = true }

# The `fetch` surface for the E3-T02 lazy chunk loader (browser only; gated behind wasm32 in code).
[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "WorkerGlobalScope",
    "Request",
    "RequestInit",
    "RequestMode",
    "Headers",
    "Response",
    "AbortController",
    "AbortSignal",
    # E3-T05 IndexedDB durable overlay backend.
    "IdbFactory",
    "IdbOpenDbRequest",
    "IdbDatabase",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbObjectStore",
    "IdbRequest",
    "IdbVersionChangeEvent",
    "DomException",
    "Event",
    "EventTarget",
    # E3-net browser TCP transport.
    "WebSocket",
    "BinaryType",
    "MessageEvent",
]

[features]
# Forwards the quarantined E0-T19 CSR stub so the wasm riscv-tests harness can run the
# p-env binaries: `wasm-pack test --node crates/wasm --features zicsr-stub`. Off by default.
zicsr-stub = ["wasm-vm-core/zicsr-stub"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
# For building manifests in the native ChunkedBackend unit tests (matches the storage crate's sha2).
sha2 = { version = "0.10", default-features = false }
